# shd-firmware

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32dev
components/esp-wifi/: CMakeLists.txt  Kconfig.projbuild  esp-wifi.c
components/tiny_storage/: CHANGELOG  CMakeLists.txt  Kconfig.projbuild  REAME.md  flash_storage.c  flash_storage.cpp  flash_storage.h  sdcard.cpp
components/tiny_webservice/: CHANGELOG  CMakeLists.txt  Kconfig.projbuild  README.md  tiny_webservice.c  (+2 more)
data/: devices.json  index.html  leitura.json  main.js  settings.json
src/: CMakeLists.txt  main.c  main.cpp
src/cmd/: commands.cpp  commands.h  commands_handler.cpp  commands_handler.h  commands_utils.cpp  commands_utils.h
src/modbus/: slave.c  slave.h
src/protocol/: data.h  message_process.c  message_process.cpp  message_process.h  protocol.c  protocol.cpp  protocol.h
src/rs485/: rs485.c  rs485.cpp  rs485.h
src/sensor/: flowsensor.c  flowsensor.cpp  flowsensor.h
src/serial/: console.c  console.cpp  console.h
src/settings/: devices.c  devices.cpp  devices.h  reading.cpp  reading.h  settings.c  settings.cpp  settings.h
src/sim/: sim7070g.cpp  sim7070g.h  sim7070g_utils.cpp  sim7070g_utils.h
src/sim7070g/: sim7070g.c  sim7070g.cpp  sim7070g.h
src/utils/: utils.c  utils.cpp  utils.h
src/web/: settings_api.c  settings_api.h  web_api.h  web_common.c  web_common.cpp  web_common.h  web_routes.cpp  web_routes.h  webservice.cpp  webservice.h
test/: commands_test.h  minunit.h  test.c  test.cpp
webpage/: _footer.html  _header.html  index.md  main.js  modest.css  readings.md  routes_sim.py  settings.md
(+18 files in other folders)
