idf_component_register(
    SRCS 
        "sensor/flowsensor.c"
        "rs485/rs485.c"
        "serial/console.c"
        "protocol/protocol.c"
        "protocol/message_process.c"
        "web/settings_api.c"
        "web/web_common.c"
        "settings/settings.c"
        "settings/devices.c"
        "sim7070g/sim7070g.c"
        "utils/utils.c"
        "main.cpp"
    INCLUDE_DIRS 
        "."
        "sensor/"
        "rs485/"
        "serial/"
        "protocol/"
        "web/"
        "settings/"
        "sim7070g/"
        "utils/"
)
