idf_component_register(
    SRCS 
        "sensor/flowsensor.cpp"
        "rs485/rs485.cpp"
        "serial/console.cpp"
        "protocol/protocol.cpp"
        "protocol/message_process.cpp"
        "web/settings_api.cpp"
        "web/web_common.cpp"
        "settings/settings.cpp"
        "settings/devices.cpp"
        "sim7070g/sim7070g.cpp"
        "utils/utils.cpp"
        "main.cpp"
    INCLUDE_DIRS 
        "."
        "sensor/"
        "rs485/"
        "serial/"
        "protocol/"
        "web/"
        "settings/"
        "sim7070g/"
        "utils/"
)
